--- a/index.html
+++ b/index.html
@@ -1,12 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>User Cards - HTML5 & CSS3 | UI Practice</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    
-</body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+
+  <body>
+<!--
+
+UI Design by:
+
+https://uidesigndaily.com/posts/sketch-user-cards-card-day-1044
+
+-->
+
+    <div class="card-wrapper">
+      <div class="card">
+        <img
+          src="https://randomuser.me/api/portraits/women/63.jpg"
+          alt="user profile"
+        />
+
+        <h1>
+          Louise Luna
+        </h1>
+        <p>@louisa</p>
+
+        <input type="button" value="Follow" />
+      </div>
+
+      <div class="card">
+        <img
+          src="https://randomuser.me/api/portraits/men/86.jpg"
+          alt="user profile"
+        />
+
+        <h1>
+          Oscar Mullins
+        </h1>
+        <p>@oscarm</p>
+
+        <input type="button" value="Follow" />
+      </div>
+
+      <div class="card">
+        <img
+          src="https://randomuser.me/api/portraits/men/81.jpg"
+          alt="user profile"
+        />
+
+        <h1>
+          Joel Dunn
+        </h1>
+        <p>@joelll</p>
+
+        <input type="button" value="Follow" />
+      </div>
+    </div>
+  </body>
 </html>
